--- a/12 SQL Login Page/SqlLoginPage.htm
+++ b/12 SQL Login Page/SqlLoginPage.htm
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
 
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>SQL Login Page</title>
+		<link rel="stylesheet" href="LoginPageStyle.css">
+	</head>
+
+	<body>
+		<form action="SqlLoginPage.php" method="post">
+			<table class="input" bgcolor="skyblue3" align="center"><br>
+			
+			<tr class="row" align="center">
+			<td colspan="2"><h2><u>LOGIN PAGE</u></h2></td>
+			</tr>
+
+			<tr align="center">
+			<td><b>Enter Username</b></td>
+			<td><input type="text" name="username" placeholder="Username"></td>
+			</tr>
+
+			<tr align="center">
+			<td><b>Enter Password</b></td>
+			<td><input type="password" name="password" placeholder="Password"></td>
+			</tr>
+			</table>
+
+			<table class="submit" align="center">
+			<tr align="center">
+			<td><input type="submit" value="LOGIN"></td>
+			<td><input type="reset" value="CLEAR"></td>
+			</tr>
+
+			</table>
+		</form>
+	</body>
+</html>
