--- a/12 SQL Login Page/SqlLoginPage.htm
+++ b/12 SQL Login Page/SqlLoginPage.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE htm>
 
 <html lang="en">
 	<head>
@@ -6,34 +6,31 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>SQL Login Page</title>
-		<link rel="stylesheet" href="LoginPageStyle.css">
 	</head>
 
-	<body>
+	<body bgcolor="lightgreen">
 		<form action="SqlLoginPage.php" method="post">
-			<table class="input" bgcolor="skyblue3" align="center"><br>
-			
-			<tr class="row" align="center">
-			<td colspan="2"><h2><u>LOGIN PAGE</u></h2></td>
-			</tr>
+			<table bgcolor="skyblue3" align="center" height="40%" width="30%"><br>
+				<tr align="center" bgcolor="skyblue">
+					<td colspan="2"><h2><u>LOGIN PAGE</u></h2></td>
+				</tr>
 
-			<tr align="center">
-			<td><b>Enter Username</b></td>
-			<td><input type="text" name="username" placeholder="Username"></td>
-			</tr>
+				<tr align="center">
+					<td><b>Enter Username</b></td>
+					<td><input type="text" name="username" placeholder="Username"></td>
+				</tr>
 
-			<tr align="center">
-			<td><b>Enter Password</b></td>
-			<td><input type="password" name="password" placeholder="Password"></td>
-			</tr>
+				<tr align="center">
+					<td><b>Enter Password</b></td>
+					<td><input type="password" name="password" placeholder="Password"></td>
+				</tr>
 			</table>
 
-			<table class="submit" align="center">
-			<tr align="center">
-			<td><input type="submit" value="LOGIN"></td>
-			<td><input type="reset" value="CLEAR"></td>
-			</tr>
-
+			<table bgcolor="azure" align="center" height="10%" width="30%">
+				<tr align="center">
+					<td><input type="submit" value="SUBMIT"></td>
+					<td><input type="reset" value="CLEAR"></td>
+				</tr>
 			</table>
 		</form>
 	</body>
